--- a/index.css
+++ b/index.css
@@ -69,7 +69,7 @@ header .promo {
 header .promo h1 {
   margin: 0;
   font-size: 52px;
-  color: #ed6e1d;
+  color: gainsboro;
   -webkit-animation: fadeInUp 1200ms both;
   animation: fadeInUp 1200ms both;
 }
@@ -131,7 +131,7 @@ section:not(#about) {
   position: absolute;
   height: 0.2em;
   width: 100%;
-  background-color: #ed6e1d;
+  background-color: gainsboro;
   border-radius: 10%;
   opacity: 1;
   left: 0;
@@ -267,12 +267,12 @@ section:not(#about) {
 .navbar__list-item a {
   text-decoration: none;
   font-size: 21px;
-  color: #ed6e1d;
+  color: gainsboro;
   position: relative;
 }
 
 .navbar__list-item a.active {
-  color: #ed6e1d;
+  color: gainsboro;
 }
 
 .navbar__list-item a.active:before {
@@ -288,7 +288,7 @@ section:not(#about) {
   left: 0;
   width: 100%;
   height: 2px;
-  background-color: #ed6e1d;
+  background-color: gainsboro;
   content: "";
   -webkit-transform: translateY(8px);
   -ms-transform: translateY(8px);
@@ -307,7 +307,7 @@ section:not(#about) {
 }
 
 .navbar__list-item a:hover {
-  color: #ed6e1d;
+  color:gainsboro;
 }
 
 .navbar__list-item a:hover:before {
@@ -354,15 +354,15 @@ section:not(#about) {
 .about__info-title {
   margin-top: 0;
   margin-bottom: 10px;
-  font-size: 24px;
+  font-size: 50px;
   text-transform: uppercase;
-  color: #ed6e1d;
+  color: gray;
 }
 
 .about__info-text {
-  line-height: 1.5;
+  line-height: 1;
   letter-spacing: normal;
-  font-size: 18px;
+  font-size: 15px;
   font-weight: 700;
   color: #fff;
 }
@@ -376,7 +376,7 @@ section:not(#about) {
   }
 
   .about__info {
-    border-top: 20px solid #1d1d1b;
+    border-top: 20px solid #000000;
     padding: 50px;
   }
 
@@ -397,15 +397,15 @@ section:not(#about) {
 
 @media screen and (min-width: 992px) {
   .about__info {
-    border-top: 30px solid #1d1d1b;
+    border-top: 30px solid #000000;
   }
 
   .about__info-title {
-    font-size: 28px;
+    font-size: 50px;
   }
 
   .about__info-text {
-    font-size: 21px;
+    font-size: 25px;
   }
 }
 
